@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=File types and programs
+_Name=File Types and Programs
 _Comment=Specify which programs are used to open or view each type of file
 Icon=gnome-ccmime
 Exec=gnome-file-types-properties
