@@ -1,3 +1,9 @@
+2005-07-07  Sebastien Bacher  <seb128@debian.org>
+	
+	* file-types.desktop.in.in:
+	fixed some typo, Clytie Siddall <clytie@riverland.net.au> 
+	(Closes: #302614).
+
 2004-11-09  Mark McLoughlin  <mark@skynet.ie>
 
 	* Makefile.am: install .desktop file in $(datadir)/applications.
