@@ -1,6 +1,12 @@
 2005-07-07  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-settings-keyboard-xkb.c: (activation_error):
+	fixed some typo, Clytie Siddall <clytie@riverland.net.au> 
+	(Closes: #302614).
+
+2005-07-07  Sebastien Bacher  <seb128@debian.org>
+
+	* gnome-settings-keyboard-xkb.c: (activation_error):
 	fix the markup usage of the XKB dialog (Closes: #308279).
 
 2005-07-07  Sebastien Bacher  <seb128@debian.org>
