@@ -1,3 +1,9 @@
+2005-07-07  Sebastien Bacher  <seb128@debian.org>
+
+	* gnome-about-me-password.c: (wait_child):
+	fixed some typo, Clytie Siddall <clytie@riverland.net.au> 
+	(Closes: #302614).
+
 2005-07-05  Diego Gonzalez  <diego@pemas.net>
 
 	* gnome-about-me.c (about_me_update_photo): Improve the behaviour 
